Fix licence to be license in template, sooo painful

--- a/templates/qalicn.ini.erb
+++ b/templates/qalicn.ini.erb
@@ -98,6 +98,6 @@
 ; starting on the first character of the line.
 ;
 ;-------------------------------------------------------------------------------
-<% @licences.each do |licence| -%>
-<%= licence %>
+<% @licenses.each do |license| -%>
+<%= license %>
 <% end -%>
