Template updater for credentials

--- a/templates/updater/metadatawebapi.py.erb
+++ b/templates/updater/metadatawebapi.py.erb
@@ -8,8 +8,8 @@ import hashlib  # Used to compute MD5 hashes of files
 import sys      # Used to get the installed version of Python
 
 # Declare credentials to communicate with the service
-username = ''
-password = ''
+username = '<%= @qas_updates_username %>'
+password = '<%= @qas_updates_password %>'
 
 # Declare User Agent string
 version = sys.version_info
