Finish renaming installed data var in template

--- a/templates/qawserve.ini.erb
+++ b/templates/qawserve.ini.erb
@@ -4,6 +4,6 @@ SetupFileTypes=dts tpx zlx dap sdp
 
 LicenceWarning=30
 
-InstalledData=<%= @_data_dir %>
+InstalledData=<%= @_installed_data %>
 
 DataMappings=<%= @_data_mappings %>
