Add logic to create sym link to dataset dir

--- a/templates/qawserve.ini.erb
+++ b/templates/qawserve.ini.erb
@@ -4,6 +4,6 @@ SetupFileTypes=dts tpx zlx dap sdp
 
 LicenceWarning=30
 
-InstalledData=<%= @_installed_data %>
+InstalledData=<%= @_installed_data -%>,<%= @_dataset_dir -%>
 
-DataMappings=<%= @_data_mappings %>
+DataMappings=<%= @_data_mappings -%>
