--- a/templates/updater/metadatawebapi.py.erb
+++ b/templates/updater/metadatawebapi.py.erb
@@ -8,8 +8,8 @@ import hashlib  # Used to compute MD5 hashes of files
 import sys      # Used to get the installed version of Python
 
 # Declare credentials to communicate with the service
-username = '<%= @qas_updater_username %>'
-password = '<%= @qas_updater_password %>'
+username = '<%= @updater_username %>'
+password = '<%= @updater_password %>'
 
 # Declare User Agent string
 version = sys.version_info
